objects/Course__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Product_Participation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Currently used for ANZ business unit</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One</fullName>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Text__c</fullName>
        <label>Competitor Text(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blackstone</fullName>
                </value>
                <value>
                    <fullName>Cambridge University Press</fullName>
                </value>
                <value>
                    <fullName>CCH</fullName>
                </value>
                <value>
                    <fullName>Cengage</fullName>
                </value>
                <value>
                    <fullName>City U press</fullName>
                </value>
                <value>
                    <fullName>Elsevier Press</fullName>
                </value>
                <value>
                    <fullName>Federation Press</fullName>
                </value>
                <value>
                    <fullName>Hart</fullName>
                </value>
                <value>
                    <fullName>HKU Press</fullName>
                </value>
                <value>
                    <fullName>Lexis Nexis</fullName>
                </value>
                <value>
                    <fullName>Longman</fullName>
                </value>
                <value>
                    <fullName>MacMillan Education Australia</fullName>
                </value>
                <value>
                    <fullName>McGraw Hill</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Oxford University Press</fullName>
                </value>
                <value>
                    <fullName>Palgrave MacMillan</fullName>
                </value>
                <value>
                    <fullName>Pearson</fullName>
                </value>
                <value>
                    <fullName>Penguin</fullName>
                </value>
                <value>
                    <fullName>Wiley</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account_Name__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Product_Participation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <description>Currently used for ANZ business unit</description>
        <label>Course Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Course_Completion_Date__c</fullName>
        <label>Course Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Enrollment_Date__c</fullName>
        <label>Course Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <label>Course Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Adopt_Code__c</fullName>
        <label>Current Adopt Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment_Status__c</fullName>
        <label>Enrollment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Enrollment Pending</fullName>
                </value>
                <value>
                    <fullName>Partially Complete</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mastering_Source__c</fullName>
        <label>Mastering Source</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Number__c</fullName>
        <formula>Product_Name__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Students__c</fullName>
        <description>Currently used for ANZ business unit</description>
        <label>Number of Students</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+Product_Name__r.Partner__c, Product_Name__r.Partner__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Product_Participation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Price__c</fullName>
        <formula>Product_Name__r.List_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Title__c</fullName>
        <description>This field will display a link to product based on product name field. Link text will be program title . It will be used in related Lists.</description>
        <formula>HYPERLINK( &quot;/&quot;+Product_Name__r.Id , if( ISBLANK( Product_Name__r.WLEC_Program_Title__c),Product_Name__r.Name,Product_Name__r.WLEC_Program_Title__c)  )</formula>
        <label>Program Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <label>Publisher</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Semester__c</fullName>
        <description>Currently used for ANZ business unit</description>
        <label>Semester</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fall</fullName>
                </value>
                <value>
                    <fullName>Winter</fullName>
                </value>
                <value>
                    <fullName>Spring</fullName>
                </value>
                <value>
                    <fullName>Summer</fullName>
                </value>
                <value>
                    <fullName>Semester 1 &amp; 2</fullName>
                </value>
                <value>
                    <fullName>1st Semester</fullName>
                </value>
                <value>
                    <fullName>2nd Semester</fullName>
                </value>
                <value>
                    <fullName>3rd Semester</fullName>
                </value>
                <value>
                    <fullName>Double Semester</fullName>
                </value>
                <value>
                    <fullName>Winter Semester</fullName>
                </value>
                <value>
                    <fullName>Summer Semester</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sponsor</fullName>
                </value>
                <value>
                    <fullName>Content Partner</fullName>
                </value>
                <value>
                    <fullName>Speaker</fullName>
                </value>
                <value>
                    <fullName>Attendee</fullName>
                </value>
                <value>
                    <fullName>Author</fullName>
                </value>
                <value>
                    <fullName>Academic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Course_Name__c</columns>
        <columns>External_Id__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PP-{0000}</displayFormat>
        <label>Course</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <recordTypes>
        <fullName>ANZ_Record_Type</fullName>
        <active>true</active>
        <description>ANZ Record Type will be used by ANZ Users when creating their Course records</description>
        <label>ANZ Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>WPD_Record_Type</fullName>
        <active>true</active>
        <description>WPD Record Type is used by WPD Users to store their relevant course data</description>
        <label>WPD Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>